# DVA476

./: .dir-locals.el  .gitignore  Project_Report.org  pyproject.toml
project/Ann/: README.org  ann.py  cnn_config.json  coilSplit.py  pyproject.toml
project/Ann/cnn/: cnn_main.py  coil_dataset.py
project/Ann/img/: extract.py  plot.py
project/Ann/metrics/: training_log.csv
project/Ann/nn/: classifier.py  cnn_classifier.py  early_stopper.py  train_plot.py
project/Ann/utils/: utils.py
project/CNN/: README.org  cnn_model.py  config.json  pyproject.toml
project/CNN/nn/: dataset.py  network.py
project/common/: pyproject.toml
project/common/common/utils/: coil_utils.py  config_helper.py  load_data.py  plotter.py  stats.py
