# project/Ann/pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ann-project"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "common",
    # Add the common dependencies here
    "h5py>=3.14.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pymonad>=2.4.0",
    "pyside6>=6.10.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]
[tool.setuptools]
packages = ["cnn", "img", "nn", "utils"]

[tool.uv.sources]
common = { workspace = true }
