# project/CNN/pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cnn-project"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "common",
    # Common dependencies shared across the monorepo
    "h5py>=3.14.0",
    "imageio>=2.37.0",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pymonad>=2.4.0",
    "pyside6>=6.10.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

# Explicitly list the packages to include for the CNN project
[tool.setuptools]
packages = ["euro", "metrics", "models", "nn"]

# Tell uv to source the 'common' dependency from the local workspace
[tool.uv.sources]
common = { workspace = true }
